--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <article>
         <form class="">
             <label for="cep">Insira o CEP</label>
-            <input type="text" id="cep">
+            <input type="text" id="cep" placeholder="CEP">
             <input type="button" value="Procurar" id="enviar">
             <hr />
-            <input type="text" id="log">
-            <input type="text" id="bairro">
-            <input type="text" id="cidade">
-            <input type="text" id="estado">
+            <input type="text" id="log" placeholder="Rua">
+            <input type="text" id="bairro" placeholder="Bairro">
+            <input type="text" id="cidade" placeholder="Cidade">
+            <input type="text" id="estado" placeholder="Estado">
         </form>
     </article>
 </body>
